De Bruijn graph compression now compiling. Lots of test cases needed!